Add styled index.html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>¿Qué son los ciclos de sueño y cómo mejoran tu descanso? + Calculadora de Ciclos de Sueño</title>
-  <meta name="description" content="Descubre cómo funcionan los ciclos de sueño y aprende a optimizar tus horas de descanso. Usa nuestra calculadora de ciclos de sueño para encontrar tu mejor hora para dormir y despertar.">
+  <title>¿Qué son los ciclos de sueño y cómo mejoran tu descanso? + Calculadora de Sueño</title>
+  <meta name="description" content="Descubre cómo funcionan los ciclos de sueño y aprende a optimizar tus horas de descanso. Usa nuestra calculadora de sueño para encontrar tu mejor hora para dormir y despertar.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
@@ -73,8 +73,8 @@
     </ul>
     <p>Durante la noche, tu cuerpo repite estos ciclos varias veces. Despertarte al final de un ciclo, en lugar de a la mitad, puede hacerte sentir más descansado, incluso si has dormido menos horas.</p>
 
-    <h2>Calculadora de Ciclos de Sueño</h2>
-    <p>¿Quieres saber a qué hora dormir o despertar para sentirte renovado? Utiliza la siguiente <strong>calculadora de ciclos de sueño</strong> para descubrir tu horario ideal:</p>
+    <h2>Calculadora de Sueño</h2>
+    <p>¿Quieres saber a qué hora dormir o despertar para sentirte renovado? Utiliza la siguiente <strong>calculadora de sueño</strong> para descubrir tu horario ideal:</p>
 
     <div class="calculator-block">
       <div style="max-width:410px; width:100%; background:#0c0c0c; border-radius:28px; margin:0 auto;">
@@ -103,7 +103,7 @@
       <li>Evita cafeína y comidas pesadas en la noche</li>
     </ul>
 
-    <p>¿Quieres más información sobre el sueño y cómo mejorar tu descanso? Consulta <a href="https://calculadoraciclosdesueno.com/learn" target="_blank" rel="noopener noreferrer">más recursos aquí</a>.</p>
+    <p>¿Quieres más información sobre el sueño y cómo mejorar tu descanso? Consulta <a href="https://calculadoraciclosdesueno.com/como-dormir-mejor" target="_blank" rel="noopener noreferrer">más recursos aquí</a>.</p>
 
     <small>Este blog es solo informativo. Consulta a un profesional de la salud ante problemas graves de sueño.</small>
   </div>
