--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>¿Qué son los ciclos de sueño y cómo mejoran tu descanso? + Calculadora de Sueño</title>
-  <meta name="description" content="Descubre cómo funcionan los ciclos de sueño y aprende a optimizar tus horas de descanso. Usa nuestra calculadora de sueño para encontrar tu mejor hora para dormir y despertar.">
+  <title>What Are Sleep Cycles and How Do They Improve Your Rest? + Sleep Calculator</title>
+  <meta name="description" content="Learn how sleep cycles work and how to optimize your rest. Use our sleep calculator to find the best time to go to bed or wake up refreshed.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
@@ -61,28 +61,28 @@
 </head>
 <body>
   <div class="container">
-    <h1>¿Qué son los ciclos de sueño y cómo mejoran tu descanso?</h1>
-    <p>Dormir bien no solo depende de la cantidad de horas que pasamos en la cama, sino también de la <strong>calidad</strong> y los <strong>ciclos de sueño</strong> que completamos cada noche. Comprender cómo funcionan estos ciclos puede marcar una gran diferencia en tu energía diaria, concentración y bienestar general.</p>
+    <h1>What Are Sleep Cycles and How Do They Improve Your Rest?</h1>
+    <p>Getting good sleep is not only about how many hours you spend in bed, but also about the <strong>quality</strong> and the <strong>sleep cycles</strong> your body completes each night. Understanding how these cycles work can make a big difference in your daily energy, focus, and overall well-being.</p>
 
-    <h2>¿Cómo funcionan los ciclos de sueño?</h2>
-    <p>Un ciclo de sueño dura aproximadamente 90 minutos e incluye varias fases:</p>
+    <h2>How Do Sleep Cycles Work?</h2>
+    <p>A full sleep cycle lasts about 90 minutes and includes several phases:</p>
     <ul>
-      <li><b>Sueño ligero</b></li>
-      <li><b>Sueño profundo</b></li>
-      <li><b>Sueño REM (movimiento ocular rápido)</b></li>
+      <li><b>Light Sleep</b></li>
+      <li><b>Deep Sleep</b></li>
+      <li><b>REM Sleep (Rapid Eye Movement)</b></li>
     </ul>
-    <p>Durante la noche, tu cuerpo repite estos ciclos varias veces. Despertarte al final de un ciclo, en lugar de a la mitad, puede hacerte sentir más descansado, incluso si has dormido menos horas.</p>
+    <p>Your body repeats these cycles several times throughout the night. Waking up at the end of a cycle—rather than in the middle—can help you feel more refreshed, even if you slept fewer hours.</p>
 
-    <h2>Calculadora de Sueño</h2>
-    <p>¿Quieres saber a qué hora dormir o despertar para sentirte renovado? Utiliza la siguiente <strong>calculadora de sueño</strong> para descubrir tu horario ideal:</p>
+    <h2>Sleep Calculator</h2>
+    <p>Want to know the best time to go to bed or wake up to feel energized? Use the following <strong>sleep calculator</strong> to find your ideal schedule:</p>
 
     <div class="calculator-block">
       <div style="max-width:410px; width:100%; background:#0c0c0c; border-radius:28px; margin:0 auto;">
         <div style="position:relative; width:100%; padding-top:136.5%;">
           <iframe
-            src="https://calculadoraciclosdesueno.com/widget"
-            title="Calculadora de Sueño"
-            aria-label="Calculadora de Sueño"
+            src="https://mysleepcalculator.net/widget"
+            title="Sleep Calculator"
+            aria-label="Sleep Calculator"
             loading="lazy"
             style="position:absolute; top:0; left:0; width:100%; height:100%; border-radius:28px; background:#0c0c0c;"
             allowfullscreen
@@ -90,22 +90,22 @@
         </div>
       </div>
       <p class="credit">
-        Calculadora por <a href="https://calculadoraciclosdesueno.com/" target="_blank" rel="noopener noreferrer">calculadoraciclosdesueno.com</a>
+        Calculator by <a href="https://mysleepcalculator.net/" target="_blank" rel="noopener noreferrer">mysleepcalculator.net</a>
       </p>
     </div>
 
-    <h2>Consejos para mejorar tu sueño</h2>
+    <h2>Tips to Improve Your Sleep</h2>
     <ul>
-      <li>Mantén horarios regulares para acostarte y despertarte</li>
-      <li>Evita pantallas y luces brillantes antes de dormir</li>
-      <li>Crea un ambiente oscuro y tranquilo en tu habitación</li>
-      <li>Realiza ejercicio de manera regular</li>
-      <li>Evita cafeína y comidas pesadas en la noche</li>
+      <li>Go to bed and wake up at consistent times</li>
+      <li>Avoid screens and bright lights before bed</li>
+      <li>Create a dark and quiet environment</li>
+      <li>Exercise regularly</li>
+      <li>Avoid caffeine and heavy meals at night</li>
     </ul>
 
-    <p>¿Quieres más información sobre el sueño y cómo mejorar tu descanso? Consulta <a href="https://calculadoraciclosdesueno.com/como-dormir-mejor" target="_blank" rel="noopener noreferrer">más recursos aquí</a>.</p>
+    <p>Want to learn more about sleep and how to improve your rest? Check out <a href="https://mysleepcalculator.net/learn" target="_blank" rel="noopener noreferrer">more resources here</a>.</p>
 
-    <small>Este blog es solo informativo. Consulta a un profesional de la salud ante problemas graves de sueño.</small>
+    <small>This blog is for informational purposes only. Please consult a healthcare professional for serious sleep issues.</small>
   </div>
 </body>
 </html>
